# doom-espidf

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  doom-espidf.code-workspace  partitions.csv  sdkconfig  sdkconfig.old
components/prboom/: CMakeLists.txt  component.mk  config.h  d_deh.c  d_main.c  doomtype.h  i_system.h  md5.c  r_data.c  r_main.c  r_plane.c  r_plane.h  w_mmap.c  w_wad.c  z_zone.c
components/prboom-esp32-compat/: CMakeLists.txt  Kconfig.projbuild  Makefile  component.mk  gamepad.c  i_sound.c  i_system.c  i_video.c  lcd_test.c  spi_lcd.c
components/prboom-esp32-compat/include/: dma.h  lcd_test.h
components/prboom-wad-tables/: CMakeLists.txt  component.mk
main/: CMakeLists.txt  app_main.c  component.mk
misc/cmake-tools-config/: cmake-tools-kits.json  info.txt
